--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "express": "^4.17.2"
   },
+  "scripts":{
+    "start":"node app.js"
+    },
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2"
