--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "dependencies": {
-    "express": "^4.17.2"
-  },
+  "name": "nodejs-restapi-poc",
+  "version": "1.0.0",
+  "description": "A NodeJS REST API poc",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "jest",
+    "start": "nodemon app.js",
+    "start-dev": "nodemon app.js"
+  },
+  "author": "Jonathan Spruance",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "winston": "^3.2.1",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "gulp": "^4.0.2",
-    "nodemon": "^2.0.15"
+    "jest": "^24.7.1",
+    "moxios": "^0.4.0",
+    "nodemon": "^1.18.11",
+    "supertest": "^4.0.0"
   }
 }
